--- a/_builtin/apps/home/app.json
+++ b/_builtin/apps/home/app.json
@@ -1,4 +1,5 @@
 {
-    "version": 1.1,
-    "desc": "Home launcher"
+    "version": 1.4,
+    "name": "Home Launcher",
+    "desc": "Default dashboard for badge"
 }
